--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "mcil",
   "displayName": "mcil",
-  "description": "",
+  "description": "Syntax highlighter for the Model Checking Intermediate Language",
+  "license": "MIT",
   "version": "0.0.1",
+  "preview": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ModelChecker/vscode_syntax_highlighter"
+  },
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -32,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@vscode/vsce": "^2.21.1",
     "esbuild": "^0.17.3",
     "js-yaml": "^4.1.0"
   }
